--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <div class="center">
 <ul class="menu">
-<li><a href="#">Prueba de cambio 2</a></li>
+<li><a href="#">FEATURES</a></li>
 <li><a href="#">REVIEWS</a></li>
 <li><a href="#">BLOG</a></li>
 <li><a href="#">SUPPORT</a></li>
