--- a/src/html/pages/subpages/contacto.html
+++ b/src/html/pages/subpages/contacto.html
@@ -27,5 +27,5 @@
   }
   
 </script>
-<console class="log" toTime()="toTime()"></console><h1>Lunes, 17 de Enero de 2023</h1>
-<h1>, a las 22:58:36</h1>
+<console class="log" toTime()="toTime()"></console><h1>Miércoles, 18 de Enero de 2023</h1>
+<h1>, a las 0:46:0</h1>
